--- a/components/go-gspajefa/overlays/prod/deployment-patch.yaml
+++ b/components/go-gspajefa/overlays/prod/deployment-patch.yaml
@@ -12,5 +12,5 @@ spec:
   template: 
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
+      - image: artifactory-docker-artifactory.apps.rosa.rhtap-services.xmdt.p3.openshiftapps.com/rhtap/go-gspajefa:f7463691f43538001cdd4eb5312d0c2dbda72d2a@sha256:dc3fd872dbe7f1180ce42eabc77c6db11bace33cd4d0d373a73f26ecb0f9e472
         name: container-image  
